Completed Graphmanager + Music player

--- a/Exercise03/app/src/main/res/layout/activity_main.xml
+++ b/Exercise03/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context="com.example.anas.exercise03.MainActivity"
     android:background="@color/DarkRed"
-    android:orientation="horizontal"
+
     android:padding="10dp">
 
     <LinearLayout
@@ -37,10 +37,10 @@
     <com.example.anas.exercise03.AccelView
 
         android:layout_width="fill_parent"
-        android:layout_height="150dp"
+        android:layout_height="200dp"
         android:id="@+id/accView"
         android:layout_below="@+id/layoutSeekBar"
-        android:background="#bbbbbb"
+        android:background="#000000"
         android:padding="25dp"/>
 
     <LinearLayout
@@ -53,17 +53,18 @@
 
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:text="window Size:"
             android:id="@+id/tvWinsize"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:textColor="@color/White"/>
         <SeekBar
             android:id="@+id/seekbarFFT"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:background="@drawable/text_style"
             android:layout_alignParentTop="true"
             android:max="10"
             android:progress="5"
@@ -73,9 +74,23 @@
 
     <com.robinhood.spark.SparkView
         android:id="@+id/sparkview"
+        android:layout_width="fill_parent"
+        android:layout_height="200dp"
+        android:layout_below="@+id/layoutSeekBar2"
+        android:background="@drawable/border"
+        android:padding="20dp"
+        />
+
+    <Button
+        android:id="@+id/btnMusic"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_below="@+id/layoutSeekBar2"/>
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:text="Music Player"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/btn_style"
+        android:textColor="@color/White"/>
 
 
 </RelativeLayout>
